--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(125, 198, 205);
+    background: rgba(15, 15, 15, 0.986);
     color: rgb(45, 45, 45);
     padding: 10px;
     font-family: arial;
@@ -11,10 +11,12 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
+    background: rgb(209, 219, 64);
    margin: 0 auto;
+   margin-bottom: 20px;
     display: flex;
     padding: 10px;
+    border-radius: 100px;
 }
 h1 {
     display: flex;
@@ -37,8 +39,9 @@ a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(231, 32, 32);
     display: flex;
+    border-radius: 50px;
 }
 .sidebar {
     margin-right: 25px;
@@ -46,6 +49,7 @@ main {
 }
 .sidebar-img {
     width: 200px;
+    border-radius: 100px;
 }
 .content {
     flex: 1;
@@ -55,8 +59,34 @@ main {
 /* portfolio styles */
 #interests {
     border: 4px silver ridge;
+    border-radius: 25px;
     padding: 8px;
 }
 h2, h3 {
     margin: 0px;
 }
+         /* portfolio styles */
+         .content h1 {
+            color: black;
+        }
+
+        #portfolio {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        #portfolio li {
+            background: #fff;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+
+        #portfolio li:hover {
+            background: #eee;
+        }
+
+        #portfolio a {
+            text-decoration: none;
+            color: #454545;
+        }
